--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "outDir": "./public"
+    "outDir": "./dist"
   }
 }
