--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
+    "nodemailer": "^6.9.1",
+    "sharp": "^0.32.1",
     "socket.io": "4.0.2"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
