--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "node ./public/index.js",
     "monitor": "nodemon src/index.ts",
+    "test": "jest",
+    "testw": "jest --watchAll",
     "build": "npx tsc"
   },
   "author": "Obada Ali",
@@ -17,6 +19,7 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
+    "mongodb-memory-server": "^8.12.2",
     "mongoose": "^6.9.1",
     "nodemailer": "^6.9.1",
     "sharp": "^0.32.1",
@@ -25,10 +28,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
